<resources>
    <string name="app_name">KLM Flight Tracker</string>

    <!-- Main Activity -->
    <string name="invalid_value">Invalid origin or destination.</string>
    <string name="insuficient_info">You must provide more information to perform the search.</string>

    <!-- Task GetAirportsList -->
    <string name="request_error">Error loading data.</string>

    <!-- Task GetDestinationWeather -->
    <string name="weather_error">Weather information not available.</string>

    <!-- Task GetDestinationNews -->
    <string name="news_error">News not available.</string>

    <!-- Task GetFlightDetails -->
    <string name="error_flight_request">Error loading flight details.</string>
    <string name="flight_not_found">Flight not found.</string>
    <string name="time_at"> at </string>


    <!-- Layouts -->
    <string name="loading">Loading</string>
    <string name="loading_data">Loading data...</string>
    <string name="back">Back</string>


    <string name="origin">Origin</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="destination">Destination</string>
    <string name="select_date">Select Date</string>
    <string name="Search">Search</string>

    <string name="search_number_date">Search by flight number and date</string>
    <string name="flight_number">Flight Number</string>
    <string name="date">Date</string>
    <string name="number_eg">e.g., KL999</string>

    <string name="search_origin_destination">Search by departure and destination</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="flight_status">Flight Status</string>

</resources>
