<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:text="@string/Search" />

    <TableLayout
        android:id="@+id/rlFlightNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/white_button_grey_stroke_rounded_4dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_number_date" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">
            <TextView
                android:id="@+id/tvFlight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/flight_number" />
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etFlight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:maxLines="1"
                android:maxLength="6"
                android:singleLine="true"
                android:capitalize="characters"
                android:layout_marginRight="5dp"
                android:background="@drawable/white_button_grey_stroke_rounded_4dp"
                android:layout_below="@+id/tvFlight"
                android:hint="@string/number_eg"/>

            <EditText
                android:id="@+id/etSelectDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/white_button_grey_stroke_rounded_4dp"
                android:editable="false"
                android:hint="@string/select_date"/>
        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:id="@+id/rlDepAndDest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlFlightNumber"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/white_button_grey_stroke_rounded_4dp">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/search_origin_destination" />

        <TextView
            android:id="@+id/tvDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:text="@string/departure" />
        <AutoCompleteTextView
            android:id="@+id/etDeparture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="8dp"
            android:background="@drawable/white_button_grey_stroke_rounded_4dp"
            android:layout_below="@+id/tvDeparture"/>
        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDeparture"
            android:layout_marginTop="10dp"
            android:text="@string/destination" />
        <AutoCompleteTextView
            android:id="@+id/etDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="8dp"
            android:background="@drawable/white_button_grey_stroke_rounded_4dp"
            android:layout_below="@+id/tvDestination"/>

    </RelativeLayout>


</RelativeLayout>
