<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activities.FlightsListActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginTop="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvFlightNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/loading"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/departure"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/arrival"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvOrigin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/loading"/>

            <TextView
                android:id="@+id/tvDestination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/loading"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvDepartureTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/loading"/>

            <TextView
                android:id="@+id/tvArrivalTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/loading"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/loading"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>
